# UnturnedServerManager-Tauri

./: .gitignore  FIXES_BATCH_1.md  FIXES_BATCH_2.md  FIXES_BATCH_3.md  FIXES_SUMMARY.md  README.md  code-review-report.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
UnturnedServerManager-web/: DESIGN_UPGRADE_SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml
UnturnedServerManager-web/docs/: changelog.md  faq.md  index.md
UnturnedServerManager-web/docs/.vitepress/: DESIGN_SYSTEM_UPGRADE.md  config.ts
UnturnedServerManager-web/docs/features/: config-editor.md  dashboard.md  logs.md  permissions.md  plugins.md  rcon.md  save.md  schedule.md  server.md  update.md  window.md  wizard.md  workshop.md
UnturnedServerManager-web/docs/guide/: index.md  (+3 more)
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bridge/: UnturnedServerManagerBridge.cs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  environment.rs  installer.rs  logs.rs  mod.rs  rcon.rs  save.rs  schedule.rs  server.rs  setup.rs  system.rs  update.rs  updater.rs  window.rs
src-tauri/src/models/: config.rs  mod.rs  state.rs  system_stats.rs
src-tauri/src/services/: config_service.rs  local_command_bridge.rs  log_service.rs  mod.rs  process.rs  rcon_client.rs  scheduler.rs  system_monitor.rs
src/lib/: CircularBuffer.test.ts  CircularBuffer.ts  stores.svelte.ts  types.ts  utils.ts
src/test/: setup.ts
(+34 files in other folders)
