[package]
name = "unturned-server-manager"
version = "2.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unturned_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["rt", "time"] }
chrono = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
sysinfo = "0.34"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
tauri-plugin-shell = "2.3.5"
quick-xml = "0.39.4"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
